--- a/localserver/package.json
+++ b/localserver/package.json
@@ -2,6 +2,9 @@
     "name": "tfjs_vhs",
     "version": "1.0.0",
     "dependencies": {
-        "express": "^4.16.4"
+        "express": "^4.16.4",
+        "fs": "0.0.1-security",
+        "glob": "^7.1.3",
+        "readline": "^1.3.0"
     }
 }
