--- a/localserver/package.json
+++ b/localserver/package.json
@@ -2,9 +2,11 @@
     "name": "tfjs_vhs",
     "version": "1.0.0",
     "dependencies": {
+        "bootstrap": "^4.1.3",
         "express": "^4.16.4",
         "fs": "0.0.1-security",
         "glob": "^7.1.3",
+        "imagesloaded": "^4.1.4",
         "readline": "^1.3.0"
     }
 }
